--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -18,3 +18,5 @@ repository:
   # The description is displayed under the repository name on the
   # organization page and in the 'About' section of the repository.
   description: "Special repository to maintain organization-wide community health files"
+
+  topics: "core-team"
